# studying-by-books

./: .gitignore  README.MD
a-developers-esential-guide-to-docker-compose/chapter2/: README.MD  docker-compose.yml  main.go
a-developers-esential-guide-to-docker-compose/chapter3/: README.MD  docker-compose.yml
a-developers-esential-guide-to-docker-compose/chapter5/: README.MD  docker-compose.yaml  redis.yaml
a-developers-esential-guide-to-docker-compose/chapter6/: prometheus.yaml
a-developers-esential-guide-to-docker-compose/chapter7/: README.MD  base-compose.yaml
a-developers-esential-guide-to-docker-compose/chapter8/: .gitignore  README.MD  create_table.sh  docker-compose.yaml  wait-for-dynamodb.sh
crafting-test-driven-software-with-python/: README.MD
crafting-test-driven-software-with-python/chapter01/: 01_automatictests.py  03_tdd.py  README.MD
crafting-test-driven-software-with-python/chapter02/: 01_chat_acceptance.py  03_chat_stubs.py  04_chat_spies.py  05_chat_fakes.py  06_acceptance_tests.py  07_dependency_injection.py  08_pinject.py  README.MD  explore.py
docker-compose/: README.MD
docker-compose/chapter2/: README.MD  docker-compose.yml  dockerfile  go.mod
docker-compose/chapter3/: README.MD  docker-compose.yml
docker-compose/chapter6/: README.MD  docker-compose.yaml
docker-compose/chapter7/: README.MD
docker-compose/chapter8/: README.MD  docker-compose.yaml
rabbitmq-cookbook/: README.MD
the-definitive-antlr4-reference/: .gitignore  README.MD
the-definitive-antlr4-reference/chapter3/: README.MD
the-definitive-antlr4-reference/chapter3/array/cpp/: CMakeLists.txt  CMakeUserPresets.json  README.MD  conanfile.txt
the-definitive-antlr4-reference/chapter3/array/cpp/src/: ShortToUnicodeString.cpp  ShortToUnicodeString.h  main.cpp
the-definitive-antlr4-reference/chapter4/: README.MD
(+106 files in other folders)
